manifests/_crds/authorizationpolicies.security.istio.io.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: AuthorizationPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"istio-ingressgateway-oauth2-proxy","namespace":"istio-system"},"spec":{"action":"CUSTOM","provider":{"name":"oauth2-proxy"},"rules":[{"to":[{"operation":{"notPaths":["/dex/*","/dex/**","/oauth2/*"]}}],"when":[{"key":"request.headers[authorization]","notValues":["*"]}]}],"selector":{"matchLabels":{"app":"istio-ingressgateway"}}}}
    name: istio-ingressgateway-oauth2-proxy
    namespace: istio-system
  spec:
    action: CUSTOM
    provider:
      name: oauth2-proxy
    rules:
    - to:
      - operation:
          notPaths:
          - /dex/*
          - /dex/**
          - /oauth2/*
      when:
      - key: request.headers[authorization]
        notValues:
        - '*'
    selector:
      matchLabels:
        app: istio-ingressgateway
- apiVersion: security.istio.io/v1
  kind: AuthorizationPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"istio-ingressgateway-require-jwt","namespace":"istio-system"},"spec":{"action":"DENY","rules":[{"from":[{"source":{"notRequestPrincipals":["*"]}}],"to":[{"operation":{"notPaths":["/dex/*","/dex/**","/oauth2/*"]}}]}],"selector":{"matchLabels":{"app":"istio-ingressgateway"}}}}
    name: istio-ingressgateway-require-jwt
    namespace: istio-system
  spec:
    action: DENY
    rules:
    - from:
      - source:
          notRequestPrincipals:
          - '*'
      to:
      - operation:
          notPaths:
          - /dex/*
          - /dex/**
          - /oauth2/*
    selector:
      matchLabels:
        app: istio-ingressgateway
- apiVersion: security.istio.io/v1
  kind: AuthorizationPolicy
  metadata:
    annotations:
      role: admin
      user: user@example.com
    name: ns-owner-access-istio
    namespace: kubeflow-user-example-com
    ownerReferences:
    - apiVersion: kubeflow.org/v1
      blockOwnerDeletion: true
      controller: true
      kind: Profile
      name: kubeflow-user-example-com
  spec:
    rules:
    - from:
      - source:
          principals:
          - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
          - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
      when:
      - key: request.headers[kubeflow-userid]
        values:
        - user@example.com
    - when:
      - key: source.namespace
        values:
        - kubeflow-user-example-com
    - to:
      - operation:
          paths:
          - /healthz
          - /metrics
          - /wait-for-drain
    - from:
      - source:
          principals:
          - cluster.local/ns/kubeflow/sa/notebook-controller-service-account
      to:
      - operation:
          methods:
          - GET
          paths:
          - '*/api/kernels'
kind: List
metadata:
